--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -50,3 +50,25 @@ jobs:
         file: Dockerfile  # Ensure this path is correct
         push: true
         tags: ${{ secrets.DOCKER_USERNAME }}/practice:latest
+
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy on EC2 via SSH
+        uses: appleboy/ssh-action@v1.0.0
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+            docker pull ${{ secrets.DOCKER_USERNAME}}/practice:latest
+
+            docker stop flask-app || true
+            docker rm flask-app || true
+
+            docker run -d \
+              --name flask-app \
+              -p 5000:5000 \
+              ${{ secrets.DOCKER_USERNAME}}/practice:latest
+
